[project]
name = "smart-support-desk-openenv"
version = "0.1.0"
description = "OpenEnv project"
authors = [{ name = "your-name" }]
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "requests",
    "openai"
]

[project.scripts]
server = "server.app:app"

[tool.openenv]
entrypoint = "inference.py"